# OS_lab_2023

./: .clang-format  .clang-format-ignore  .clang-format-include  .gitignore  LICENSE  README.md  conanfile.txt  meson.build
Samples/: scheduler.py
include/: argparse.h  scheduler.h
include/memory/: buffer_manager.h  replacer.h
include/sfs/: disk.h
src/: argparse.c  scheduler.c
src/memory/: buffer_manager.c  memory.c  replacer.c
src/scheduler/: main.c  process.c  scheduler.c
src/sfs/: disk.c
tests/: disk_test.c
